CY finish GUI Thong ke